--- a/index.html
+++ b/index.html
@@ -329,8 +329,8 @@
     <div class="image-grid">
         <div class="grid-item"><img src="koko2.jpg" alt="Image 1"></div>
         <div class="grid-item"><img src="koko5.jpeg" alt="Image 2"></div>
-        <div class="grid-item"><img src="koko4.jpg" alt="Image 3"></div>
-        <div class="grid-item"><img src="koko3.jpg" alt="Image 4"></div>
+        <div class="grid-item"><img src="koko4.JPG" alt="Image 3"></div>
+        <div class="grid-item"><img src="koko3.JPG" alt="Image 4"></div>
         <div class="grid-item"><img src="koko6.jpg" alt="Image 5"></div>
 
     
